# exchange_rate_map

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  pyproject.toml  python-ec2-key.pem  requirements.txt
core/: settings.py  urls.py
pages/: urls.py  views.py
pages/lib/: exchange_rate.py  map.py
templates/layouts/: base.html
templates/pages/: _calculation.html  _map.html  _rate.html  about.html  calculation.html  index.html  map.html  rate.html
templates/shared/: navbar.html
