[tool.poetry]
name = "rate exchange"
version = "0.1.0"
description = ""
authors = ["emma0620 <emmawang0620@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
geopandas = "^1.0.1"
matplotlib = "^3.9.2"
mplcursors = "^0.5.3"
plotly = "^5.24.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
